--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
 	</div>
 
 	<div class="container">
-		<label for="decimal" id="labeldecimal">Numero decimal: 0</label>
-		<input type="range" id="decimal" name="decimal" min="0" max="255" step="1" onchange="Converter(this.value)" value="0"> 
+		<div class="r2">
+			<div class="col1">
+				<h3 id="labeldecimal">Numero decimal: 0</h3><br>
+				<input type="range" id="decimal" name="decimal" min="0" max="255" step="1" onchange="Converter(this.value)" value="0"> 
+			</div>
+			<div class="col2">
+				<h3>Numero binrario: </h3>
+				<h3 id="lb">00000000</h3>
+			</div>
+		</div>
+
 	</div>
 
 
